Fix: setting bxSlider vheight to fix the extra spacing

--- a/src/sass/components/showcase.scss
+++ b/src/sass/components/showcase.scss
@@ -124,4 +124,10 @@
     box-shadow: none;
     border: none;
   }
+
+  // modified only for this section
+  & .auto-preview__item {
+    margin-bottom: 0 !important;
+    padding-bottom: 0 !important;
+  }
 }
